Pulseaudio config added

--- a/sway/config
+++ b/sway/config
@@ -43,10 +43,19 @@ bindsym $mod+space exec rofi -show drun -show-icons -show-sidebar -icon-theme "P
 #output DP-1 resolution 2160x3840 transform 270 position 0,0
 #output eDP-1 resolution 1920x1080 position 2160,0
 
-output DP-1 resolution 3840x2160 position 0,0
-output eDP-1 resolution 1920x1080 position 3840,0
-output HDMI-A-1 resolution 1920x1080 position 5760,0
-output HDMI-A-2 resolution 1920x1080 position 5760,0
+# External monitor on left side
+#output DP-1 resolution 3840x2160 position 0,0
+#output eDP-1 resolution 1920x1080 position 3840,0
+#output HDMI-A-1 resolution 1920x1080 position 5760,0
+#output HDMI-A-2 resolution 1920x1080 position 5760,0
+
+
+# External monitor on right side
+output DP-1 resolution 3840x2160 position 1920,0
+output eDP-1 resolution 1920x1080 position 0,0
+
+output HDMI-A-1 resolution 1920x1080 position 1920,0
+output HDMI-A-2 resolution 1920x1080 position 1920,0
 
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
@@ -327,6 +336,12 @@ bindsym Print exec grim -g "$(slurp)" -t png
 bindsym $mod+n exec --no-startup-id alacritty -t nm_tui_win -e "nmtui"
 bindsym $mod+Shift+d exec nautilus 
 bindsym $mod+f exec firefox-wayland
+
+#
+## Start apps in Floating mode
+#
+# App ID can be fetched by going through swaymsg -t get_tree | grep "app_id"
+#
 for_window [title="nm_tui_win"] floating enable
 for_window [title="(Fiji Is Just) ImageJ"] floating enable
 for_window [class="fiji-Main"] floating enable
