--- a/sway/config
+++ b/sway/config
@@ -354,6 +354,7 @@ client.focused_inactive #3b4252 #3b4252 #eceff4 #3b4252 #3b4252
 client.unfocused #3b4252 #3b4252 #eceff4 #3b4252 #3b4252
 client.urgent #434c5e #434c5e #eceff4 #434c5e #434c5e
 
+bindsym Print exec grim -g "$(slurp)" -t png
 bindsym $mod+n exec --no-startup-id alacritty -t nm_tui_win -e "nmtui"
 bindsym $mod+Shift+d exec nautilus 
 bindsym $mod+f exec firefox-wayland
