--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -6,7 +6,7 @@ window:
     x: 7
     y: 7
 
-background_opacity: 1.0
+window.opacity: 1.0
 # Copyright (c) 2017-present Arctic Ice Studio <development@arcticicestudio.com>
 # Copyright (c) 2017-present Sven Greb <code@svengreb.de>
 
